--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/services1.jpg" style="padding: 10px;" class="card-img-top" alt="...">
+            <img src="./asset/images/Untitled design/2.png" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Door step</h5>
               <p class="card-text">Experience the ultimate in convenience with our premium doorstep service. Our
@@ -198,14 +198,14 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="./asset/images/services4.jpg" style="padding: 10px;" class="card-img-top" alt="...">
+            <img src="./asset/images/1.png" style="padding: 10px;" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Pre-owned cycle </h5>
               <p class="card-text">Discover effortless buying and selling of genuine pre-owned bikes with riders point
                 Assured,
                 Rider's Point dedicated platform. Our expert-certified bicycles offer you unparalleled quality and
                 confidence while making your transaction a breeze. Simplify your pre-owned cycling experience – choose
-                FMC Assured today</p>
+                Riders point Assured today</p>
             </div>
           </div>
         </div>
