--- a/index.html
+++ b/index.html
@@ -84,24 +84,41 @@
   <!--  navbar -->
 
 
-  <section class="hero-section section-padding">
-    <div class="container">
-      <div class="row" style="display: flex;justify-content: center;align-items: center;">
-        <div class="col-md-6">
-          <h2 class="hero-text"><span class="">Bicycle Service and <br> Repair At Home</span></span></h2>
-          <div class="hero-paragraph">
-            <p>Our Service available in all over Bhubaneswar</p>
+  <section class="hero-section">
+    <div class="container-fluid">
+      <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="./asset/images/banner/banner1.png" class="d-block w-100" alt="...">
+            <!-- <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 1 Title</h5>
+              <p>Description for Slide 1</p>
+            </div> -->
           </div>
-          <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
+          <!-- <div class="carousel-item" data-bs-interval="2000">
+            <img src="./asset/images/banner/banner3.png" class="d-block w-100" alt="...">
+           
+          </div> -->
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./asset/images/banner/banner3.png" class="d-block w-100" alt="...">
+            <!-- <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 3 Title</h5>
+              <p>Description for Slide 3</p>
+            </div> -->
+          </div>
         </div>
-        <!-- <div class="col-md-1"></div> -->
-        <div class="col-md-6">
-          <img src="./asset/images/RIDERS POINT.png" class="responsive-image" alt="hero" />
-        </div>
-
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </section>
+  
 
 
   <!-- why choose us section -->
