banner design add

--- a/index.html
+++ b/index.html
@@ -665,8 +665,7 @@
                                   <div class="quote">
                                     <p style="font-weight: 400;opacity: 0.8;font-size: 15px;">"The store is great.
                                       There's a variety of Montra and Rodeo available there. Even the servicing is very
-                                      nice and the people are friendly. The only drawback is that they charge very high
-                                      for servicing. Their servicing rate is 40% higher than that of normal cycle repair
+                                      nice and the people are friendly.  Their servicing rate is 40% higher than that of normal cycle repair
                                       shops in Bhubaneswar."</p>
                                   </div>
                                   <div class="img" style="font-weight: 700;font-size: 15px;">
