--- a/index.html
+++ b/index.html
@@ -95,12 +95,26 @@
               <p>Description for Slide 1</p>
             </div> -->
           </div>
-          <!-- <div class="carousel-item" data-bs-interval="2000">
-            <img src="./asset/images/banner/banner3.png" class="d-block w-100" alt="...">
-           
-          </div> -->
           <div class="carousel-item" data-bs-interval="2000">
+            <img src="./asset/images/banner/banner2.png" class="d-block w-100" alt="...">
+           
+          </div>
+          <div class="carousel-item" >
             <img src="./asset/images/banner/banner3.png" class="d-block w-100" alt="...">
+            <!-- <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 3 Title</h5>
+              <p>Description for Slide 3</p>
+            </div> -->
+          </div>
+          <div class="carousel-item" >
+            <img src="./asset/images/banner/banner4.jpg" class="d-block w-100" alt="...">
+            <!-- <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 3 Title</h5>
+              <p>Description for Slide 3</p>
+            </div> -->
+          </div>
+          <div class="carousel-item" >
+            <img src="./asset/images/banner/banner5.jpg" class="d-block w-100" alt="...">
             <!-- <div class="carousel-caption d-none d-md-block">
               <h5>Slide 3 Title</h5>
               <p>Description for Slide 3</p>
