change in home page and about us page also inservice page hero section

--- a/bookmyslot.html
+++ b/bookmyslot.html
@@ -199,7 +199,7 @@ form .btn:hover{
     
 <!-- Form -->
 <form id="enrollForm" onsubmit="sendEmail(event)">
-  <h3 class="title text-center" style="font-weight: 600;">Book Your Slot Now</h3>
+  <h3 class="title text-center" style="font-weight: 600;">Doorstep Service Booking Slot</h3>
   <div class="row">
       <div class="column">
           <div class="input-box">
