--- a/service.html
+++ b/service.html
@@ -181,11 +181,11 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   <section class="hero-section section-padding">
     <div class="container">
       <div class="row" style="display: flex;justify-content: center;align-items: center;">
-        <div class="col-md-6">
-            <img src="./asset/images/RIDERS POINT.png" class="responsive-image" alt="hero" />
+        <div class="col-12">
+            <img src="./asset/images//banner/banner5.png" class="responsive-image" alt="hero" />
           </div>
-        <div class="col-md-6">
-          <h2 class="hero-text"><span class="">Bicycle Service and <br> Repair At Home</span></span></h2>
+        <!--div class="col-md-6">
+          <h2 class="hero-text"><span class="">Bring to Us Or <br> Call Us</span></span></h2>
           <div class="hero-paragraph">
             <p>Our Service available in all over Bhubaneswar</p>
           </div>
@@ -199,7 +199,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   </section>
 
 
-  <!-- why choose us section -->
+  <!-- why choose us section >
 
 
   <section class="whychooseus section-padding">
