--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
   <link rel="stylesheet" href="asset/style.css">
-  <link rel="stylesheet" href="asset/index.css">
+  <!-- <link rel="stylesheet" href="asset/index.css"> -->
 
 </head> 
 
@@ -33,7 +33,7 @@
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
-        <img src="./asset/images/menu.PNG" width="45" alt="bar">
+        <img  class="navresponsiveimage" src="./asset/images/menu.PNG" width="45" alt="bar">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav" style="margin-left: auto;">
@@ -67,10 +67,11 @@
           <li class="nav-item">
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
-          </li>
+          </li> -->
         </ul>
+        <button class="headerbtn btn" href="./bookmyslot.html">Book my slot</button>
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
             <i class="fal fa-shopping-cart" style="font-size: 25px;position: relative;"></i>
             <p style="background-color: #08b427;color: #fff;position: absolute;font-size: 10px;padding: 0 5px;border-radius: 50%;margin-top: -33px;margin-left: 15px;">3</p>
@@ -82,6 +83,7 @@
     </div>
   </nav>
   <!--  navbar -->
+
 
 
   <section class="hero-section">
