--- a/service.html
+++ b/service.html
@@ -178,7 +178,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 
 <div class="container" >
     
-  <section class="hero-section section-padding">
+  <section class="section-padding">
     <div class="container">
       <div class="row" style="display: flex;justify-content: center;align-items: center;">
         <div class="col-md-6">
