--- a/history.html
+++ b/history.html
@@ -19,7 +19,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
   <link rel="stylesheet" href="asset/style.css">
-  <link rel="stylesheet" href="asset/index.css">
+  <!-- <link rel="stylesheet" href="asset/index.css"> -->
 
 </head>
 <style>
@@ -103,18 +103,19 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="./index.html" style="font-weight: bolder;color: inherit !important;"><span
+      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
           style="color: #08b427;">Riders</span> Point</a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
-        <img src="./asset/images/menu.PNG" width="45" alt="bar">
+        <img  class="navresponsiveimage" src="./asset/images/menu.PNG" width="45" alt="bar">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav" style="margin-left: auto;">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="./history.html">About us</a>
           </li>
@@ -122,7 +123,8 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
             <a class="nav-link" href="./service.html">Service</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               Packages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -133,6 +135,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
               <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
             </ul>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
@@ -140,7 +143,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
           <li class="nav-item">
-            <a class="headerbtn btn" href="./bookmyslot.html" >Book my slot</a>
+            <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
           </li>
         </ul>
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
@@ -155,6 +158,47 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   </nav>
   <!--  navbar -->
 
+  <!-- navbar2 -->
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation"
+        style="border: none;outline: none;background: transparent;">
+        <img  class="navresponsiveimage" src="./asset/images/menu.PNG" width="45" alt="bar">
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./history.html">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./service.html">Service</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+           
+          </ul>
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </div>
+      </div>
+    </nav>
+  </div>
+     <!-- navbar end -->
+  
 
 
   <section class="">
