--- a/bookmyslot.html
+++ b/bookmyslot.html
@@ -119,18 +119,19 @@ form .btn:hover{
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="./index.html" style="font-weight: bolder;color: inherit !important;"><span
+      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
           style="color: #08b427;">Riders</span> Point</a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
-        <img src="./asset/images/menu.PNG" width="45" alt="bar">
+        <img  class="navresponsiveimage" src="./asset/images/menu.PNG" width="45" alt="bar">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav" style="margin-left: auto;">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="./history.html">About us</a>
           </li>
@@ -138,7 +139,8 @@ form .btn:hover{
             <a class="nav-link" href="./service.html">Service</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
               Packages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -149,16 +151,18 @@ form .btn:hover{
               <li><a class="dropdown-item" href="./dismantlingandboxing.html">Dismantling and Boxing</a></li>
             </ul>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="./gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
-          <li class="nav-item">
-            <a class="headerbtn btn" href="./bookmyslot.html" >Book my slot</a>
-          </li>
+          <!-- <li class="nav-item">
+            <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
+          </li> -->
         </ul>
+        <button class="headerbtn btn" href="./bookmyslot.html">Book my slot</button>
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
             <i class="fal fa-shopping-cart" style="font-size: 25px;position: relative;"></i>
             <p style="background-color: #08b427;color: #fff;position: absolute;font-size: 10px;padding: 0 5px;border-radius: 50%;margin-top: -33px;margin-left: 15px;">3</p>
