--- a/history.html
+++ b/history.html
@@ -142,10 +142,11 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
           <li class="nav-item">
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
-          </li>
+          </li> -->
         </ul>
+        <button class="headerbtn btn" href="./bookmyslot.html">Book my slot</button>
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
             <i class="fal fa-shopping-cart" style="font-size: 25px;position: relative;"></i>
             <p style="background-color: #08b427;color: #fff;position: absolute;font-size: 10px;padding: 0 5px;border-radius: 50%;margin-top: -33px;margin-left: 15px;">3</p>
@@ -158,47 +159,6 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   </nav>
   <!--  navbar -->
 
-  <!-- navbar2 -->
-  <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation"
-        style="border: none;outline: none;background: transparent;">
-        <img  class="navresponsiveimage" src="./asset/images/menu.PNG" width="45" alt="bar">
-      </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./history.html">About us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./service.html">Service</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-           
-          </ul>
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </div>
-      </div>
-    </nav>
-  </div>
-     <!-- navbar end -->
-  
 
 
   <section class="">
