service image design change and footer color add

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
 
 
-  <section class="hero-section">
-    <div class="container-fluid">
+  <section class="hero-section" style="margin: 0; padding: 0;">
+    <div class="container-fluid" style="margin: 0; padding: 0;">
       <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
@@ -711,7 +711,7 @@
   </section>
   <section class="section-padding mt-5">
     <!-- footer -->
-    <footer class="" style="background-color: aliceblue;padding-top: 30px;">
+    <footer class="" >
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
