--- a/service.html
+++ b/service.html
@@ -180,31 +180,17 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
 </section>
 
 
-<div class="container" >
-    
-  <section class="section-padding">
-    <div class="container">
-      <div class="row" style="display: flex;justify-content: center;align-items: center;">
-        <div class="col-12">
-            <img src="./asset/images//banner/banner5.png" class="responsive-image" alt="hero" />
-          </div>
-        <!--div class="col-md-6">
-          <h2 class="hero-text"><span class="">Bring to Us Or <br> Call Us</span></span></h2>
-          <div class="hero-paragraph">
-            <p>Our Service available in all over Bhubaneswar</p>
-          </div>
-          <a href="./bookmyslot.html"><button class="booknowbutton">Book Now</button></a>
-        </div>
-        <!-- <div class="col-md-1"></div> -->
-      
 
-      </div>
-    </div>
-  </section>
+<section style="margin: 0; padding: 0;">
+  <div class="container-fluid" style="margin: 0; padding: 0;">
+    <img src="./asset/images/banner/banner5.png" style="width: 100%; height: 100%; display: block;" alt="hero" />
+  </div>
+</section>
 
 
-  <!-- why choose us section >
 
+  <!-- why choose us section -->
+<div class="container">
 
   <section class="whychooseus section-padding">
     <div class="container">
