navbar button remove and add in list item

--- a/nongearbicycleservice.html
+++ b/nongearbicycleservice.html
@@ -127,11 +127,11 @@
           <li class="nav-item">
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
-          </li> -->
+          </li>
         </ul>
-        <button class="headerbtn btn" href="./bookmyslot.html">Book my slot</button>
+        
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
             <i class="fal fa-shopping-cart" style="font-size: 25px;position: relative;"></i>
             <p style="background-color: #08b427;color: #fff;position: absolute;font-size: 10px;padding: 0 5px;border-radius: 50%;margin-top: -33px;margin-left: 15px;">3</p>
