--- a/service.html
+++ b/service.html
@@ -142,11 +142,11 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
           <li class="nav-item">
             <a class="nav-link" href="./preowned.html">Pre-owned cycle</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="headerbtn btn" href="./bookmyslot.html">Book my slot</a>
-          </li> -->
+          </li>
         </ul>
-        <button class="headerbtn btn" href="./bookmyslot.html">Book my slot</button>
+        
         <!-- <div class="cart" style="margin-left: auto;position: relative;">
             <i class="fal fa-shopping-cart" style="font-size: 25px;position: relative;"></i>
             <p style="background-color: #08b427;color: #fff;position: absolute;font-size: 10px;padding: 0 5px;border-radius: 50%;margin-top: -33px;margin-left: 15px;">3</p>
@@ -192,54 +192,7 @@ href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   <!-- why choose us section -->
 <div class="container">
 
-  <section class="whychooseus section-padding">
-    <div class="container">
-      <p class="sub-heading-content">Why choose us ?</p>
-      <p class="sub-heading-second">Bhubaneswar’s first doorstep bicycle service provider. Trusted over 8 years with
-        endless happy customers.
-        Hassle-Free Service with smart technician. <a href="bookmyslot.html" style="color: #000;"> Book Now</a></p>
-      <p class="sub-heading-third">
-        Experience convenient, reliable bicycle repairs with Riders Point’s doorstep service. Our skilled mechanics
-        provide top-notch maintenance and tune-ups. Explore our Riders point Assured platform for seamless purchases and
-        sales of
-        authenticated pre-owned bikes. Simplify your cycling journey with Riders Point today! </p>
-
-
-      <!-- <div class="row" style="display: flex;justify-content: center;align-items:center; text-align: center;">
-        <div class="col-md-6 mt-5">
-          <div class="number" data-count="25">25 <div class="plus">+</div>
-          </div>
-          <div class="number-count-text">Number of Cities Present</div>
-          <span class="number-count-spantext">Expert Bicycle Repair at Home – All Across India!</span>
-        </div>
-        <div class="col-md-6 mt-5">
-          <div class="number" data-count="15000">15 </div>
-          <div class="number-count-text">Number of Cities Present</div>
-          <span class="number-count-spantext">Expert Bicycle Repair at Home – All Across India!</span>
-        </div>
-        <div class="col-md-6 mt-5">
-          <div class="number" data-count="4.6">4.6 <div class="plus">+</div>
-          </div>
-          <div class="number-count-text">Number of Cities Present</div>
-          <span class="number-count-spantext">Expert Bicycle Repair at Home – All Across India!</span>
-        </div>
-        <div class="col-md-6 mt-5">
-          <div class="number" data-count="100%">100 <div class="plus">%</div>
-          </div>
-          <div class="number-count-text">Number of Cities Present</div>
-          <span class="number-count-spantext">Expert Bicycle Repair at Home – All Across India!</span>
-        </div>
-      </div> -->
-
-      <!-- <div class="row mt-5">
-        <div class="col-12" style="display: flex;justify-content: center;align-items: center;"> <button
-            class="booknowbutton">Book Now</button></div>
-      </div> -->
-
-
-    </div>
-  </section>
-
+ 
     <div class="text-header">
         <div class="man-content">
             <div class="contnet">
