--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
-          style="color: #08b427;">Riders</span> Point</a>
+      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;">
+        <img src="./asset/images/Bicyclelog0.png" width="200" alt="">
+      </a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
