--- a/bookmyslot.html
+++ b/bookmyslot.html
@@ -119,8 +119,9 @@ form .btn:hover{
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
     <div class="container">
-      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;"><span
-          style="color: #08b427;">Riders</span> Point</a>
+      <a class="navbar-brand" href="#" style="font-weight: bolder;color: inherit !important;">
+        <img src="./asset/images/Bicyclelog0.png" width="200" alt="">
+      </a>
       <button class="" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation"
         style="border: none;outline: none;background: transparent;">
@@ -242,7 +243,7 @@ form .btn:hover{
           </div>
           <div class="input-box">
               <span>Phone Number :</span>
-              <input type="number" name="phone" placeholder="+918260821103" required>
+              <input type="number" name="phone" placeholder="0123456789" required>
           </div>
           <div class="flex">
               <div class="input-box">
