--- a/service.html
+++ b/service.html
@@ -209,7 +209,7 @@
                                 <div class="main-content">
                                     <div class="content">
                                         <div class="text-center">
-                                            <h2 style="color: #08b427; font-weight: bolder;">Our Services</h2>
+                                            <h2 style="color: #08b427; font-weight: bolder; margin-top: 20px;">Our Services</h2>
                                         </div>
                                     </div>
                                 </div>
